--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,7 +8,7 @@
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "https://o.remove.bg/downloads/544254bf-9462-4b66-a78f-b790f02d2611/images-removebg-preview.png",
       "type": "image/png",
       "sizes": "192x192"
     },
