--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.12.1",
+    "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
+    "react-sparklines": "^1.7.0",
     "styled-components": "^5.3.11",
     "web-vitals": "^2.1.4"
   },
