--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-sparklines": "^1.7.0",
     "styled-components": "^5.3.11",
     "web-vitals": "^2.1.4",
-    "yup": "^1.2.0"
+    "yup": "^1.2.0",
+    "zup": "^0.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
