--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
     "react-sparklines": "^1.7.0",
+    "sparklines": "^1.3.0",
     "styled-components": "^5.3.11",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0",
