--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "formik": "^2.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
     "react-sparklines": "^1.7.0",
+    "react-spinners": "^0.13.8",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.4",
     "sparklines": "^1.3.0",
     "styled-components": "^5.3.11",
     "web-vitals": "^2.1.4",
